lab1/Test/L1-A-10-48.output
Error Type A at Line 2
Error Type A at Line 9
Error Type A at Line 21
Error Type B at Line 33
