lab1/Test/L1-A-10-48.cmm
int FP6wZ8or_albX7g10l ( struct Ufg5epcE6dETy5Bnd 
  nje4F1 [ 1970743044 ] ) &{
}
int ;
float i637B8Lec8VI_e , nPjv7J27k 

;
int ;
struct \{
  struct FqX {
    int uFyze7LhkRUaZ4 ;
    int tS7bp5g ;
  }IKDFWomiSc44A ;
  int uItBqslx0RL , IHnpIDZdLEoyrMnRsMS = qSnY_y1ARyd0uOBeoYFT 
    && sVMwy7SaM8FS < aPbybTX7 * DEZXvTJgBT ( OfYOSxOVLu 
    , Nk4KA9Jsw = tZeF_sE3VRnF97Zw || MfDF07KDdcFJ0 <= 
    puqUpGl6PoauarUnrd + tdgS / VjZu [ X2PjvjRThaYY = 
    i_DGKAaufR7bZvSV = PKlz >= QKiw83yoMUtnd + P5 ( DCjIfMuGHptYH 
    > zPXvelNIfbEZNmHtL [ YjfRruxhrK70erZ || qm9ESn_dNfMbf6U 
    == Pm2O9cFBuXJrByRtQ / DmjLgTtM67d ( GSNteEJfhsZ3 
    , ati4qYI , TizWVQi6hziALE17VW = DVTUwg @!= diyG65MoCQ 
    + ! - ( WQU0jmeCcr ) . pHWbxQsk6W ) ] , 1376592017 
    . FKq0Qv5MynGa ) / ! KKJ5vg4O * csfoPE3QT ( ) ] ) 
    . h0TiPf - - ! 1184354121.1853790467 ;
};
int ;
int ;
int djVRCbufvmREn ( ) {
  Zr ;
  r8dz6T8mOwTsWmr0te ;
  lUEjQqvkZ4TBb6n47YCF ;
  QOrdrT4BdsBwc6 ;
  if ( th5HfK_NlhF05U2SDF )   j_4RZVutcWeOxZfi while 
    ;
else   if ( X8kgrn2zl9kMT )   GnUOrzEvnhecyzabwGTa 
    ;


  if ( x3ygzLy3 )   if ( bh9Elcr_gsyrq )   if ( i 
    )   Ttxgtq2miCi ;
else   Fu9A5pU ;

else {
    if ( e14FEymIvEQ )     atF ;
else     O8PvjRDDbj6 ;

    while ( hvRbdRBE1dFhrrGk )     return _ ;

    Jof004YhLTr ;
  }

}
int ;
int IV_bQmn0PrjeQ ( int oEVayIPrVRdW2wJ , int BDO4IBB 
  ) {
}
